<resources>
    <string name="app_name">SumbanginAja</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="label_join_as_sumbangers">Bergabung Menjadi \nSumbangers</string>
    <string name="label_login">Masuk</string>
    <string name="label_login_subtitle">Yuk masuk akunmu untuk lanjut</string>
    <string name="label_email">Email</string>
    <string name="hint_email_address">Alamat Email</string>
    <string name="label_password">Kata Sandi</string>
    <string name="hint_password">Kata Sandi</string>
    <string name="action_login">Masuk</string>
    <string name="label_login_with">atau login dengan</string>
    <string name="action_login_with_google">Login Dengan Google</string>
    <string name="label_havent_account"><u>Belum punya akun ? Daftar</u></string>
    <string name="error_must_not_empty">Password tidak boleh kosong</string>
    <string name="error_email_not_valid">Email tidak valid</string>
    <string name="error_email_must_not_empty">Email tidak boleh kosong</string>
    <string name="label_full_name">Nama Lengkap</string>
    <string name="hint_full_name">Nama Lengkap</string>
    <string name="label_register_agreement">Dengan membuat akun berarti kamu setuju dengan <b>Ketentuan Layanan</b> sumbanginaja</string>
    <string name="action_register">Buat Akun</string>
    <string name="label_register_with">atau daftar dengan</string>
    <string name="action_register_with_google">Daftar dengan Google</string>
    <string name="label_have_registered"><u>Udah daftar ? Login disini</u></string>
    <string name="error_name_must_not_empty">Nama lengkap tidak boleh kosong</string>
    <string name="message_register_successfull">Register Berhasil, silahkan login dengan akun anda :)</string>
    <string name="label_looking_for">Mau cari apa ?</string>
    <string name="label_food_around_you">Makanan di sekitarmu</string>
    <string name="label_show_all">Lihat selengkapnya</string>
    <string name="label_food_type">Food</string>
    <string name="label_non_food_type">Non-Food</string>
    <string name="label_phone">No Telepon</string>
    <string name="hint_phone">No telepon</string>
    <string name="hint_address">Alamat</string>
    <string name="title_account">Akun</string>
    <string name="title_add_food">Tambah Makanan</string>
    <string name="title_food_detail">Detail Makanan</string>
    <string name="title_choose_province">Pilih Provinsi</string>
    <string name="title_choose_city">Pilih Kota</string>
    <string name="action_logout">Keluar</string>
    <string name="title_confirmation">Konfirmasi</string>
    <string name="message_logout">Apakah anda yakin ingin keluar ?</string>
    <string name="label_alamat">Alamat</string>
    <string name="action_save">Simpan</string>
    <string name="error_address_must_not_empty">Alamat tidak boleh kosong</string>
    <string name="message_update_profile_success">Update profil berhasil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_description">Deksripsi</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="label_location">Lokasi</string>
    <string name="label_open_map">Buka Peta</string>
    <string name="label_call_food_ranger">Hubungi Food Ranger</string>
    <string name="label_give_food">Serahkan Makanan</string>
    <string name="label_scan_barcode_below">Scan Barcode Dibawah Ini</string>
    <string name="message_password_must_8_character">Password minimal harus 8 karakter</string>
    <string name="title_my_food_list">Daftar Makanan Saya</string>
    <string name="message_phone_must_not_empty">No telepon tidak boleh kosong</string>
    <string name="message_phone_number_not_valid">No telepon tidak valid</string>
    <string name="error_login_failed">Username/Password anda salah</string>
    <string name="label_upload_food_photo">Upload Foto Makanan</string>
    <string name="label_food_name">Nama Makanan</string>
    <string name="label_hint_food_name">Contoh: Roti Tawar</string>
    <string name="label_food_description">Deskripsi</string>
    <string name="label_hint_food_description">Deskripsi makanan</string>
    <string name="label_province">Provinsi</string>
    <string name="label_city">Kota</string>
    <string name="action_add_food">Tambah Makanan</string>
    <string name="label_full_address">Alamat Lengkap</string>
    <string name="action_choose_city">Pilih Kota</string>
    <string name="action_choose_province">Pilih Provinsi</string>
    <string name="label_empty_input">-</string>
    <string name="label_latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
    <string name="action_take_position">Ambil Posisi</string>

    <string-array name="pictures">
        <item>Dari kamera</item>
        <item>Dari galeri</item>
    </string-array>
    <string name="label_food_empty_state">Daftar Makananmu kosong nih, yuk sumbangkan makanan kamu</string>
    <string name="label_transaction_is_completed">Transaksi Makanan Sudah Selesai</string>
    <string name="label_thank_you_food_ranger">Terimakasih telah berkontribusi menjadi Food Ranger, dan telah menyelamatkan bumi dari sampah makanan</string>
    <string name="action_back_to_home">Kembali ke Beranda</string>
    <string name="action_close">Tutup</string>
    <string name="action_take_me_there">Arahkan Saya</string>
    <string name="action_start">Mulai Menggunakan</string>
    <string name="label_welcoming_onboarding">Salam hangat dari kami untuk para Food Rangers. Berbagi tanpa Merugi</string>
    <string name="title_ask_permission_location">Perizinan Layanan Lokasi</string>
    <string name="label_location_access">Kami meminta akses lokasi anda hanya untuk meningkatkan pengalaman pengguna dengan cara mencari makanan terdekat di lokasi anda</string>
    <string name="action_allowed">Izinkan</string>

</resources>