<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/dimen_36dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/imgDrawable"
        tools:src="@drawable/ic_success_illustration"
        android:layout_width="@dimen/dimen_300dp"
        android:layout_height="@dimen/dimen_300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_36dp"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDrawable"
        style="@style/SumbanginAjaTextStyle.Bold.Heading2"
        tools:text="@string/label_transaction_is_completed" />

    <TextView
        android:id="@+id/tvDescription"
        style="@style/SumbanginAjaTextStyle.Regular.Heading4.DarkGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginHorizontal="@dimen/dimen_36dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:text="@string/label_thank_you_food_ranger" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDialog"
        style="@style/SumbanginAjaButton.WhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:minHeight="0dp"
        android:paddingVertical="@dimen/dimen_16dp"
        android:text="@string/action_back_to_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>