<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryGreen"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_double"
            android:layout_marginTop="@dimen/space_double"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Hai Ibnu Batutah" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_double"
            android:layout_marginTop="@dimen/space_double"
            android:background="@drawable/bg_search_view"
            android:backgroundTint="@color/white"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="@string/label_looking_for"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_triple"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txFoodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_food_around_you"
        android:layout_marginTop="@dimen/space_double"
        android:layout_marginHorizontal="@dimen/space_double"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/txShowAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_double"
        android:text="@string/label_show_all"
        app:layout_constraintBottom_toBottomOf="@+id/txFoodTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txFoodTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>